[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/main.gd" type="Script" id=3]
[ext_resource path="res://Scripts/OutOfBounds.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/clear.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/fail.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/CATimage.jpg" type="Texture" id=7]
[ext_resource path="res://Assets/dogImage.jpg" type="Texture" id=8]
[ext_resource path="res://Assets/ArialBlack.fnt" type="BitmapFont" id=9]
[ext_resource path="res://Assets/title.png" type="Texture" id=10]
[ext_resource path="res://Assets/getready.png" type="Texture" id=11]

[node name="Main" type="Node"]
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ -2129.14 ]
}

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
margin_right = 288.0
margin_bottom = 64.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 9 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CATimage" type="Sprite" parent="UI/ScoreLabel"]
position = Vector2( 25, 36.288 )
scale = Vector2( 0.001, 0.001 )
texture = ExtResource( 7 )

[node name="dogImage" type="Sprite" parent="UI/ScoreLabel"]
position = Vector2( 19.8478, 37.2311 )
scale = Vector2( 0.001, 0.001 )
texture = ExtResource( 8 )

[node name="GetReadySprite" type="Sprite" parent="UI"]
position = Vector2( 288, 700 )
scale = Vector2( 4, 4 )
texture = ExtResource( 11 )

[node name="HighScoreLabel" type="Label" parent="UI"]
margin_right = 576.0
margin_bottom = 1024.0
custom_fonts/font = ExtResource( 9 )
text = "
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleSprite" type="Sprite" parent="UI"]
position = Vector2( 288, 100 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )

[node name="Background(bobafett)" type="Sprite" parent="."]
position = Vector2( 288, 512 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( -0.89624, 0 )
rotation = 3.14159
scale = Vector2( 2, 2 )
gravity = 1000.0

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_top = 0
limit_bottom = 1024

[node name="OutOfBounds" parent="." instance=ExtResource( 4 )]
position = Vector2( -0.355988, 0 )

[node name="ClearSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="FailSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Tween" type="Tween" parent="."]
[connection signal="got_hit" from="Player" to="." method="_on_Player_got_hit"]
